--- a/src/components/Pages/Members/Members.css
+++ b/src/components/Pages/Members/Members.css
@@ -85,6 +85,8 @@
   border: 1px solid rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
   text-align: left;
+  overflow: scroll;
+  height: 650px;
 }
 
 .info-header {
@@ -195,6 +197,10 @@
   .feature-grid {
     grid-template-columns: 1fr;
     gap: 1rem;
+  }
+
+  .info-content {
+    height: 400px;
   }
 }
 
