--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -123,16 +123,29 @@
 }
 
 @media (max-width: 768px) {
+
   .animated-logo {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 
   .main-call-to-action-btn {
-    box-shadow: 0px 0px 20px #ff4400;
+    font-size: 1.8rem;
+    box-shadow: 0px 0px 10px #edb49f;
   }
 
   .main-call-to-action-btn:hover {
     scale: 1;
+  }
+
+  .hero-quote {
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 1rem;
+  }
+
+  .hero-tagline {
+    font-size: 1.25rem;
+    font-weight: 600;
   }
 
   @keyframes underlineGrow {
@@ -140,7 +153,7 @@
       opacity: 0;
     }
     to {
-      width: 450px;
+      width: 350px;
     }
   }
 }
