--- a/src/components/Pages/Projects/Projects.css
+++ b/src/components/Pages/Projects/Projects.css
@@ -304,4 +304,14 @@
   .modal-image {
     height: auto;
   }
+
+  .modal-overlay {
+    padding: 0;
+  }
+
+  .modal-content {
+    height: 100%;
+    width: 100%;
+    border-radius: 0px;
+  }
 }
