--- a/src/components/Pages/Main/Main.css
+++ b/src/components/Pages/Main/Main.css
@@ -122,38 +122,64 @@
   }
 }
 
+.main-container-mobile {
+  display: none;
+}
+
 @media (max-width: 768px) {
 
-  .animated-logo {
+  .main-container {
+    display: none;
+  }
+
+  .main-container-mobile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background: #1a1a1ada;
+  }
+
+  .main-mobile-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: fadeinup 1s ease-in;
+  }
+
+  .main-container-mobile h1 {
     font-size: 3rem;
   }
 
-  .main-call-to-action-btn {
-    font-size: 1.8rem;
-    box-shadow: 0px 0px 10px #edb49f;
+  .main-container-mobile span {
+    color: rgb(255, 123, 0);
   }
 
-  .main-call-to-action-btn:hover {
-    scale: 1;
-  }
-
-  .hero-quote {
-    font-size: 1rem;
+  .main-container-mobile p {
     font-weight: 400;
-    padding: 1rem;
+    font-size: 1.15rem;
   }
 
-  .hero-tagline {
-    font-size: 1.25rem;
+  .logo-underline-mobile {
+    background: linear-gradient(90deg, #ff4d00, #ffffff);
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    height: 4px;
+    width: 320px;
+  }
+
+  .main-call-to-action-btn-mobile {
+    padding: 8px 25px;
+    border: none;
+    border-radius: 25px;
+    margin-top: 25px;
+    font-size: 1.3rem;
     font-weight: 600;
-  }
-
-  @keyframes underlineGrow {
-    from {
-      opacity: 0;
-    }
-    to {
-      width: 350px;
-    }
+    background: linear-gradient(90deg, #ff6200, #ff8c00, #ff4400);
+    background-size: 200% 200%;
+    animation: gradientFlow 6s linear infinite, fadeIn 1.5s ease-in;
+    color: white;
   }
 }
