--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,68 +6,13 @@
     transform: translateX(-50%);
     width: 80dvw;
     max-width: 650px;
-    height: 60px;
+    height: auto;
     z-index: 1000;
+    padding: 12px;
 }
 
-.navnew-desktop {
-    box-sizing: border-box;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.6);
-    border-radius: 35px;
-    backdrop-filter: blur(10px);
-    padding: 0px 13px;
-    list-style: none;
-    margin: 0;
-}
-
-.navnew-right {
-    display: flex;
-    gap: 20px;
-}
-
-.navnew-desktop li {
-    background: rgba(255, 255, 255, 0.4);
-    font-size: 1.2rem;
-    line-height: 0;
-    padding: 18px 17px;
-    font-weight: 800;
-    border-radius: 25px;
-    transition: 0.3s;
-}
-
-.navnew-desktop li:hover {
-    transform: scale(1.05);
-    box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.6);
-}
-
-.navnew-desktop li:active {
-    transform: scale(1);
-    transition: 0.05s;
-    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.4);
-}
-
-.navnew-joinus-btn {
-    transform: scale(1.1);
-    background: rgb(255, 128, 0) !important;
-}
-
-.navnew-joinus-btn:hover {
-    background: white !important;
-    color: black !important;
-}
-
-.navnew-joinus-btn:active {
-    transform: scale(1.05) !important;
-}
-
-.navnew-desktop a {
-    text-decoration: none;
-    color: white;
+.navnew-container li {
+    padding: 5px 15px;
 }
 
 /* Mobile menu button */
