--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -98,11 +98,10 @@
 }
 
 .navnew-mobile-menu li {
-    margin: 20px 0;
     font-size: 3rem;
     opacity: 0;
     transform: translateY(20px);
-    border-radius: 10px;
+    padding: 0px 30px;
 }
 
 .navnew-mobile-overlay.show .navnew-mobile-menu li {
